src/antlr/generated/PlaygroundParser.js
// Generated from Playground.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var PlaygroundVisitor = require('./PlaygroundVisitor').PlaygroundVisitor;

var grammarFileName = "Playground.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "','", "'var'", "'this'", "'@'", "'while'", "'loop'", 
                     "'if'", "'else'", "'end'", null, null, null, "'null'", 
                     "'('", "')'", "'.'", "'='", "'+='", "'-='", "'AND'", 
                     "'OR'", "'NOT'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'=>'", 
                     "'arrowUp'", "'arrowDown'", "'arrowLeft'", "'arrowRight'", 
                     "'space'", "'spaceBar'", "'keyA'", "'keyB'", "'keyC'", 
                     "'keyD'", "'keyE'", "'keyF'", "'keyG'", "'keyH'", "'keyI'", 
                     "'keyJ'", "'keyK'", "'keyL'", "'keyM'", "'keyN'", "'keyO'", 
                     "'keyP'", "'keyQ'", "'keyR'", "'keyS'", "'keyT'", "'keyU'", 
                     "'keyV'", "'keyW'", "'keyX'", "'keyY'", "'keyZ'", "'key0'", 
                     "'key1'", "'key2'", "'key3'", "'key4'", "'key5'", "'key6'", 
                     "'key7'", "'key8'", "'key9'" ];

var symbolicNames = [ null, null, "VAR", "THIS", "AT", "WHILE", "LOOP", 
                      "IF", "ELSE", "END", "BOOL_LITERAL", "NUMBER_LITERAL", 
                      "STRING_LITERAL", "NULL", "LPAREN", "RPAREN", "DOT", 
                      "ASSIGN", "INC", "DEC", "AND", "OR", "NOT", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "EQUAL", "NOTEQUAL", "GT", 
                      "LT", "GE", "LE", "ARROW", "ARROWUP", "ARROWDOWN", 
                      "ARROWLEFT", "ARROWRIGHT", "SPACE", "SPACEBAR", "KEYA", 
                      "KEYB", "KEYC", "KEYD", "KEYE", "KEYF", "KEYG", "KEYH", 
                      "KEYI", "KEYJ", "KEYK", "KEYL", "KEYM", "KEYN", "KEYO", 
                      "KEYP", "KEYQ", "KEYR", "KEYS", "KEYT", "KEYU", "KEYV", 
                      "KEYW", "KEYX", "KEYY", "KEYZ", "KEY0", "KEY1", "KEY2", 
                      "KEY3", "KEY4", "KEY5", "KEY6", "KEY7", "KEY8", "KEY9", 
                      "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER" ];

var ruleNames =  [ "parse", "scope", "statement", "varDeclaration", "varAssignment", 
                   "objectPropertyAssignment", "eventStatement", "eventParams", 
                   "conditionalStatement", "loopStatement", "whileStatement", 
                   "expression", "primary", "objectProperty", "objectMethodCall", 
                   "staticMethodCall", "objectIdentifier", "methodParam", 
                   "literal", "constantLiteral", "booleanOperator", "arithmeticOperator", 
                   "relationalOperator", "keyInput" ];

function PlaygroundParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

PlaygroundParser.prototype = Object.create(antlr4.Parser.prototype);
PlaygroundParser.prototype.constructor = PlaygroundParser;

Object.defineProperty(PlaygroundParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

PlaygroundParser.EOF = antlr4.Token.EOF;
PlaygroundParser.T__0 = 1;
PlaygroundParser.VAR = 2;
PlaygroundParser.THIS = 3;
PlaygroundParser.AT = 4;
PlaygroundParser.WHILE = 5;
PlaygroundParser.LOOP = 6;
PlaygroundParser.IF = 7;
PlaygroundParser.ELSE = 8;
PlaygroundParser.END = 9;
PlaygroundParser.BOOL_LITERAL = 10;
PlaygroundParser.NUMBER_LITERAL = 11;
PlaygroundParser.STRING_LITERAL = 12;
PlaygroundParser.NULL = 13;
PlaygroundParser.LPAREN = 14;
PlaygroundParser.RPAREN = 15;
PlaygroundParser.DOT = 16;
PlaygroundParser.ASSIGN = 17;
PlaygroundParser.INC = 18;
PlaygroundParser.DEC = 19;
PlaygroundParser.AND = 20;
PlaygroundParser.OR = 21;
PlaygroundParser.NOT = 22;
PlaygroundParser.ADD = 23;
PlaygroundParser.SUB = 24;
PlaygroundParser.MUL = 25;
PlaygroundParser.DIV = 26;
PlaygroundParser.MOD = 27;
PlaygroundParser.EQUAL = 28;
PlaygroundParser.NOTEQUAL = 29;
PlaygroundParser.GT = 30;
PlaygroundParser.LT = 31;
PlaygroundParser.GE = 32;
PlaygroundParser.LE = 33;
PlaygroundParser.ARROW = 34;
PlaygroundParser.ARROWUP = 35;
PlaygroundParser.ARROWDOWN = 36;
PlaygroundParser.ARROWLEFT = 37;
PlaygroundParser.ARROWRIGHT = 38;
PlaygroundParser.SPACE = 39;
PlaygroundParser.SPACEBAR = 40;
PlaygroundParser.KEYA = 41;
PlaygroundParser.KEYB = 42;
PlaygroundParser.KEYC = 43;
PlaygroundParser.KEYD = 44;
PlaygroundParser.KEYE = 45;
PlaygroundParser.KEYF = 46;
PlaygroundParser.KEYG = 47;
PlaygroundParser.KEYH = 48;
PlaygroundParser.KEYI = 49;
PlaygroundParser.KEYJ = 50;
PlaygroundParser.KEYK = 51;
PlaygroundParser.KEYL = 52;
PlaygroundParser.KEYM = 53;
PlaygroundParser.KEYN = 54;
PlaygroundParser.KEYO = 55;
PlaygroundParser.KEYP = 56;
PlaygroundParser.KEYQ = 57;
PlaygroundParser.KEYR = 58;
PlaygroundParser.KEYS = 59;
PlaygroundParser.KEYT = 60;
PlaygroundParser.KEYU = 61;
PlaygroundParser.KEYV = 62;
PlaygroundParser.KEYW = 63;
PlaygroundParser.KEYX = 64;
PlaygroundParser.KEYY = 65;
PlaygroundParser.KEYZ = 66;
PlaygroundParser.KEY0 = 67;
PlaygroundParser.KEY1 = 68;
PlaygroundParser.KEY2 = 69;
PlaygroundParser.KEY3 = 70;
PlaygroundParser.KEY4 = 71;
PlaygroundParser.KEY5 = 72;
PlaygroundParser.KEY6 = 73;
PlaygroundParser.KEY7 = 74;
PlaygroundParser.KEY8 = 75;
PlaygroundParser.KEY9 = 76;
PlaygroundParser.WS = 77;
PlaygroundParser.COMMENT = 78;
PlaygroundParser.LINE_COMMENT = 79;
PlaygroundParser.IDENTIFIER = 80;

PlaygroundParser.RULE_parse = 0;
PlaygroundParser.RULE_scope = 1;
PlaygroundParser.RULE_statement = 2;
PlaygroundParser.RULE_varDeclaration = 3;
PlaygroundParser.RULE_varAssignment = 4;
PlaygroundParser.RULE_objectPropertyAssignment = 5;
PlaygroundParser.RULE_eventStatement = 6;
PlaygroundParser.RULE_eventParams = 7;
PlaygroundParser.RULE_conditionalStatement = 8;
PlaygroundParser.RULE_loopStatement = 9;
PlaygroundParser.RULE_whileStatement = 10;
PlaygroundParser.RULE_expression = 11;
PlaygroundParser.RULE_primary = 12;
PlaygroundParser.RULE_objectProperty = 13;
PlaygroundParser.RULE_objectMethodCall = 14;
PlaygroundParser.RULE_staticMethodCall = 15;
PlaygroundParser.RULE_objectIdentifier = 16;
PlaygroundParser.RULE_methodParam = 17;
PlaygroundParser.RULE_literal = 18;
PlaygroundParser.RULE_constantLiteral = 19;
PlaygroundParser.RULE_booleanOperator = 20;
PlaygroundParser.RULE_arithmeticOperator = 21;
PlaygroundParser.RULE_relationalOperator = 22;
PlaygroundParser.RULE_keyInput = 23;


function ParseContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlaygroundParser.RULE_parse;
    return this;
}

ParseContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ParseContext.prototype.constructor = ParseContext;

ParseContext.prototype.scope = function() {
    return this.getTypedRuleContext(ScopeContext,0);
};

ParseContext.prototype.EOF = function() {
    return this.getToken(PlaygroundParser.EOF, 0);
};

ParseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlaygroundVisitor ) {
        return visitor.visitParse(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlaygroundParser.ParseContext = ParseContext;

PlaygroundParser.prototype.parse = function() {

    var localctx = new ParseContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, PlaygroundParser.RULE_parse);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 48;
        this.scope();
        this.state = 49;
        this.match(PlaygroundParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ScopeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlaygroundParser.RULE_scope;
    return this;
}

ScopeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ScopeContext.prototype.constructor = ScopeContext;

ScopeContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

ScopeContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlaygroundVisitor ) {
        return visitor.visitScope(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlaygroundParser.ScopeContext = ScopeContext;

PlaygroundParser.prototype.scope = function() {

    var localctx = new ScopeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, PlaygroundParser.RULE_scope);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 54;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PlaygroundParser.VAR) | (1 << PlaygroundParser.THIS) | (1 << PlaygroundParser.AT) | (1 << PlaygroundParser.WHILE) | (1 << PlaygroundParser.LOOP) | (1 << PlaygroundParser.IF))) !== 0) || _la===PlaygroundParser.IDENTIFIER) {
            this.state = 51;
            this.statement();
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlaygroundParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.eventStatement = function() {
    return this.getTypedRuleContext(EventStatementContext,0);
};

StatementContext.prototype.objectMethodCall = function() {
    return this.getTypedRuleContext(ObjectMethodCallContext,0);
};

StatementContext.prototype.staticMethodCall = function() {
    return this.getTypedRuleContext(StaticMethodCallContext,0);
};

StatementContext.prototype.varDeclaration = function() {
    return this.getTypedRuleContext(VarDeclarationContext,0);
};

StatementContext.prototype.varAssignment = function() {
    return this.getTypedRuleContext(VarAssignmentContext,0);
};

StatementContext.prototype.objectPropertyAssignment = function() {
    return this.getTypedRuleContext(ObjectPropertyAssignmentContext,0);
};

StatementContext.prototype.loopStatement = function() {
    return this.getTypedRuleContext(LoopStatementContext,0);
};

StatementContext.prototype.whileStatement = function() {
    return this.getTypedRuleContext(WhileStatementContext,0);
};

StatementContext.prototype.conditionalStatement = function() {
    return this.getTypedRuleContext(ConditionalStatementContext,0);
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlaygroundVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlaygroundParser.StatementContext = StatementContext;

PlaygroundParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, PlaygroundParser.RULE_statement);
    try {
        this.state = 66;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 57;
            this.eventStatement();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 58;
            this.objectMethodCall();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 59;
            this.staticMethodCall();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 60;
            this.varDeclaration();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 61;
            this.varAssignment();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 62;
            this.objectPropertyAssignment();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 63;
            this.loopStatement();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 64;
            this.whileStatement();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 65;
            this.conditionalStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VarDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlaygroundParser.RULE_varDeclaration;
    this.name = null; // Token
    this.assignment = null; // ExpressionContext
    return this;
}

VarDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarDeclarationContext.prototype.constructor = VarDeclarationContext;

VarDeclarationContext.prototype.VAR = function() {
    return this.getToken(PlaygroundParser.VAR, 0);
};

VarDeclarationContext.prototype.IDENTIFIER = function() {
    return this.getToken(PlaygroundParser.IDENTIFIER, 0);
};

VarDeclarationContext.prototype.ASSIGN = function() {
    return this.getToken(PlaygroundParser.ASSIGN, 0);
};

VarDeclarationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

VarDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlaygroundVisitor ) {
        return visitor.visitVarDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlaygroundParser.VarDeclarationContext = VarDeclarationContext;

PlaygroundParser.prototype.varDeclaration = function() {

    var localctx = new VarDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, PlaygroundParser.RULE_varDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 68;
        this.match(PlaygroundParser.VAR);
        this.state = 69;
        localctx.name = this.match(PlaygroundParser.IDENTIFIER);
        this.state = 72;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PlaygroundParser.ASSIGN) {
            this.state = 70;
            this.match(PlaygroundParser.ASSIGN);
            this.state = 71;
            localctx.assignment = this.expression(0);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VarAssignmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlaygroundParser.RULE_varAssignment;
    this.name = null; // Token
    this.op = null; // Token
    this.assignment = null; // ExpressionContext
    return this;
}

VarAssignmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarAssignmentContext.prototype.constructor = VarAssignmentContext;

VarAssignmentContext.prototype.IDENTIFIER = function() {
    return this.getToken(PlaygroundParser.IDENTIFIER, 0);
};

VarAssignmentContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

VarAssignmentContext.prototype.ASSIGN = function() {
    return this.getToken(PlaygroundParser.ASSIGN, 0);
};

VarAssignmentContext.prototype.INC = function() {
    return this.getToken(PlaygroundParser.INC, 0);
};

VarAssignmentContext.prototype.DEC = function() {
    return this.getToken(PlaygroundParser.DEC, 0);
};

VarAssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlaygroundVisitor ) {
        return visitor.visitVarAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlaygroundParser.VarAssignmentContext = VarAssignmentContext;

PlaygroundParser.prototype.varAssignment = function() {

    var localctx = new VarAssignmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, PlaygroundParser.RULE_varAssignment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 74;
        localctx.name = this.match(PlaygroundParser.IDENTIFIER);
        this.state = 75;
        localctx.op = this._input.LT(1);
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PlaygroundParser.ASSIGN) | (1 << PlaygroundParser.INC) | (1 << PlaygroundParser.DEC))) !== 0))) {
            localctx.op = this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 76;
        localctx.assignment = this.expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ObjectPropertyAssignmentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlaygroundParser.RULE_objectPropertyAssignment;
    this.property = null; // ObjectPropertyContext
    this.op = null; // Token
    this.assignment = null; // ExpressionContext
    return this;
}

ObjectPropertyAssignmentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ObjectPropertyAssignmentContext.prototype.constructor = ObjectPropertyAssignmentContext;

ObjectPropertyAssignmentContext.prototype.objectProperty = function() {
    return this.getTypedRuleContext(ObjectPropertyContext,0);
};

ObjectPropertyAssignmentContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ObjectPropertyAssignmentContext.prototype.ASSIGN = function() {
    return this.getToken(PlaygroundParser.ASSIGN, 0);
};

ObjectPropertyAssignmentContext.prototype.INC = function() {
    return this.getToken(PlaygroundParser.INC, 0);
};

ObjectPropertyAssignmentContext.prototype.DEC = function() {
    return this.getToken(PlaygroundParser.DEC, 0);
};

ObjectPropertyAssignmentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlaygroundVisitor ) {
        return visitor.visitObjectPropertyAssignment(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlaygroundParser.ObjectPropertyAssignmentContext = ObjectPropertyAssignmentContext;

PlaygroundParser.prototype.objectPropertyAssignment = function() {

    var localctx = new ObjectPropertyAssignmentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, PlaygroundParser.RULE_objectPropertyAssignment);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        localctx.property = this.objectProperty();
        this.state = 79;
        localctx.op = this._input.LT(1);
        _la = this._input.LA(1);
        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << PlaygroundParser.ASSIGN) | (1 << PlaygroundParser.INC) | (1 << PlaygroundParser.DEC))) !== 0))) {
            localctx.op = this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 80;
        localctx.assignment = this.expression(0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function EventStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = PlaygroundParser.RULE_eventStatement;
    this.eventName = null; // Token
    this.params = null; // EventParamsContext
    this.body = null; // ScopeContext
    return this;
}

EventStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EventStatementContext.prototype.constructor = EventStatementContext;

EventStatementContext.prototype.AT = function() {
    return this.getToken(PlaygroundParser.AT, 0);
};

EventStatementContext.prototype.ASSIGN = function() {
    return this.getToken(PlaygroundParser.ASSIGN, 0);
};

EventStatementContext.prototype.LPAREN = function() {
    return this.getToken(PlaygroundParser.LPAREN, 0);
};

EventStatementContext.prototype.RPAREN = function() {
    return this.getToken(PlaygroundParser.RPAREN, 0);
};

EventStatementContext.prototype.ARROW = function() {
    return this.getToken(PlaygroundParser.ARROW, 0);
};

EventStatementContext.prototype.END = function() {
    return this.getToken(PlaygroundParser.END, 0);
};

EventStatementContext.prototype.IDENTIFIER = function() {
    return this.getToken(PlaygroundParser.IDENTIFIER, 0);
};

EventStatementContext.prototype.scope = function() {
    return this.getTypedRuleContext(ScopeContext,0);
};

EventStatementContext.prototype.eventParams = function() {
    return this.getTypedRuleContext(EventParamsContext,0);
};

EventStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof PlaygroundVisitor ) {
        return visitor.visitEventStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




PlaygroundParser.EventStatementContext = EventStatementContext;

PlaygroundParser.prototype.eventStatement = function() {

    var localctx = new EventStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, PlaygroundParser.RULE_eventStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        this.match(PlaygroundParser.AT);
        this.state = 83;
        localctx.eventName = this.match(PlaygroundParser.IDENTIFIER);
        this.state = 84;
        this.match(PlaygroundParser.ASSIGN);
        this.state = 85;
        this.match(PlaygroundParser.LPAREN);
        this.state = 87;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===PlaygroundParser.IDENTIFIER) {
            this.state = 86;
            localctx.params = this.eventParams();
        }

        this.state = 89;
        this.match(PlaygroundParser.RPAREN);
        this.state = 90;
        this.match(PlaygroundParser.ARROW);
        this.state = 91;
        localctx.body = this.scope();
        this.state = 92;
        this.match(PlaygroundParser.END);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

